--- a/update-yum-packages.yaml
+++ b/update-yum-packages.yaml
@@ -3,7 +3,7 @@
 
   become: true
   tasks:
-    - name update yum packages
+    - name: update yum packages
       yum:
         name: 
           - nano
